--- a/popup/index.html
+++ b/popup/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul id="censored-list"></ul>
     </main>
-    <script src="popup_script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
