--- a/popup/index.html
+++ b/popup/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="popup_style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
